# test

./: .gitignore  test.asm
c++11/project/cmake/: BasicsSetup.cmake  CMakeLists.txt
c++11/src/: main.cpp
doc/: links.odt
src/: FbWrapper.py  GitTool.py  parse.py  pyside_test.py  test.txt
testjuce2/JUCE/extras/Introjucer/: Introjucer.jucer
testjuce2/JUCE/extras/Introjucer/Source/Application/: jucer_JuceUpdater.cpp  jucer_MainWindow.cpp
testjuce2/JUCE/extras/JuceDemo/: Juce Demo.jucer
testjuce2/JUCE/modules/juce_audio_plugin_client/: juce_module_info
testjuce2/JUCE/modules/juce_audio_plugin_client/AAX/: juce_AAX_Wrapper.cpp
testjuce2/JUCE/modules/juce_audio_plugin_client/AU/: juce_AU_Wrapper.mm
testjuce2/JUCE/modules/juce_audio_plugin_client/RTAS/: juce_RTAS_Wrapper.cpp
testjuce2/JUCE/modules/juce_audio_plugin_client/VST/: juce_VST_Wrapper.cpp
testjuce2/JUCE/modules/juce_audio_utils/: juce_module_info
testjuce2/JUCE/modules/juce_audio_utils/gui/: juce_AudioDeviceSelectorComponent.cpp  juce_AudioThumbnail.cpp  juce_AudioThumbnailCache.cpp
testjuce2/JUCE/modules/juce_browser_plugin/: juce_module_info
testjuce2/JUCE/modules/juce_browser_plugin/wrapper/: juce_ActiveX_GlueCode.cpp
testjuce2/solution/: solution.sln
testjuce2/solution/app/: AudioModule.h  Content.cpp  Content.h  ControlCenter.cpp  ControlCenter.h  Editor.cpp  Editor.h  IControlCenter.h  IOEngine.cpp  IOEngine.h  ModuleParameters.h  ProcessData.h  SineOscTestModule.cpp  SineOscTestModule.h  app.vcxproj  app.vcxproj.filters  main.cpp  main.h
(+21 files in other folders)
